--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
+          <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
           <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -240,8 +241,8 @@
             </p>
           </div>
           
-          <div style="width: 40%; margin:0 auto; vertical-align: middle;">
-            <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
+          <div class="videoContainer" style="width: 40%; margin:0 auto; vertical-align: middle;">
+            <video class="videos" style="vertical-align: middle;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
               <source src="./assets/videos/presentazione.mp4" type="video/mp4" />
             </video>
           </div>
