--- a/inner-page.html
+++ b/inner-page.html
@@ -90,7 +90,7 @@
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto" href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link active" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link" href="./pensieri.html">PENSIERI</a></li>
+          <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -131,94 +131,191 @@
 
       </div>
     </section><!-- End Breadcrumbs -->
+    <div class="embedsocial-hashtag" data-ref="c989df2afe0b889ebc62fd0a4a12279afa09c2b9"></div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
+    <section class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
+      <h2  style="padding-top: 1em;">Eventi in corso:</h2>
+      <div style="display: flex; overflow-x: scroll; align-items: center; margin: 0 auto; ">
+        <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
+          <div class="item-container" onclick="window.dialog.showModal();">
+            <!--<div class="item-container" onclick="window.dialog.showModal();">-->
+            <div class="img-container">
+                <img src="./assets/img/avo.mondovi/avo.mondovi-07062023-0004.webp" alt="Event image">
+            </div>
 
-    <section class="inner-page" style="display: flex;">
-      <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
-        <div class="item-container" onclick="window.dialog.showModal();">
-          <!--<div class="item-container" onclick="window.dialog.showModal();">-->
-          <div class="img-container">
-              <img src="./assets/img/avo.mondovi/avo.mondovi-07062023-0004.webp" alt="Event image">
-          </div>
+            <div class="body-container">
+                <div class="overlay"></div>
 
-          <div class="body-container">
-              <div class="overlay"></div>
+                <div class="event-info">
+                    <p class="title">INCONTRO AVO</p>
+                    <div class="separator"></div>
+                    <p class="info" style="text-align: center;">Sede della Croce Rossa di Mondovì - via Croce Rossa 4</p>
+                    <p class="price">Già concluso</p>
 
-              <div class="event-info">
-                  <p class="title">INCONTRO AVO</p>
-                  <div class="separator"></div>
-                  <p class="info" style="text-align: center;">Sede della Croce Rossa di Mondovì - via Croce Rossa 4</p>
-                  <p class="price">Già concluso</p>
+                    <div class="additional-info">
+                        <p class="info">
+                            <i class="far fa-calendar-alt"></i>
+                            22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30
+                        </p>
 
-                  <div class="additional-info">
-                      <p class="info">
-                          <i class="far fa-calendar-alt"></i>
-                          22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30
-                      </p>
+                        <p class="info description">
+                          Saluti del presidente AVO Mondovl Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe <span>...</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
+          <h2><b>Incontro AVO</b></h2>
+          <p class="info" style="text-align: center;">
+            <i class="far fa-calendar-alt"></i>
+            <b>22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30</b>
+          </p>
+          <ol style="font-size: 0.8rem;">
+            <li><span class="number_divider">1</span>Saluti del presidente AVO Mondovì Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe 
+              Guerra e della Direzione Sanitaria con il dottor Maurizio Ippoliti. Relazione del Presidente AVO e 
+              della Vicepresidente AVO Mondovì su origine, valori, significato del volontariato Avo, organizzazione. 
+              missione e importanza della partecipazione alla vita associativa. Intervento su primo soccorso a cura dell'
+              Infermiera Daniela Bisi;</li>
+            <li><span class="number_divider">2</span>Etica del volontario: consapevolezza e conoscenza di sé, come approcciarsi alle persone fragili e 
+              come gestire le emozioni con la psicologa dott. Michela Boccabella Norme di igiene, profilassi, vaccini, post-covid, malattie infettive con
+              Coordinatrice infermieristica Daniela Bisi;</li>
+            <li><span class="number_divider">3</span>La relazione di aiuto: comunicazione e ascolto per rendere efficace e terapeutico il volontariato, 
+              le aspettative e le motivazioni del volontario Avo con la psicologa Dott. Michela Boccabella. Fattive collaborazioni tra volontari, medici, 
+              infermieri, oss con la Dottoressa Vera Bignone;</li>
+            <li><span class="number_divider">4</span>Le attività di Avo Mondovì' nelle varie Rsa e a domicilio. Interverranno responsabili Rsa e per il volontariato 
+              domiciliare il Presidente Avo Mondovi e Responsabili CSSM.</li>
+            <li><span class="number_divider">5</span>Essere volontario con persone particolarmente fragili con intervento coordinatori Centro psichiatrico di Ceva e 
+              coordinatrici Dea Mondovì. Aspetti medico legali, norme di sicurezza, emergenza, antincendio, antinfortunistica con il Responsabile RSPP di ASL CN1 l'Architetto
+              Maurizio Origlia.</li>
+          </ol>
+          <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
+        </dialog>
+        </div>
+        <div class="cardContainer animate__animated animate__bounce">
+          <div class="item-container concluso">
+            <div class="img-container">
+                <img src="./assets/img/avo.mondovi/photo_2023-06-08_22-07-49.jpg" alt="Event image">
+            </div>
 
-                      <p class="info description">
-                        Saluti del presidente AVO Mondovl Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe <span>...</span>
-                      </p>
-                  </div>
-              </div>
-          </div>
+            <div class="body-container">
+                <div class="overlay"></div>
+
+                <div class="event-info">
+                    <p class="title" style="text-align: center;">IL SALONE DEL VOLONTARIATO</p>
+                    <div class="separator"></div>
+                    <p class="info" style="text-align: center;">Mondovì, via Sant'Agostino</p>
+                    <p class="price">Già concluso</p>
+
+                    <div class="additional-info">
+                        <p class="info">
+                            <i class="far fa-calendar-alt"></i>
+                            6 giugno 2023
+                            <br>
+                            dalle 9 alle 14
+                        </p>
+
+                        <p class="info description">
+                          Incontro tra scuola e volontari dell'Associazione Volontari Ospedalieri di Mondovì
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
-      <!--<dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
-        <h2><b>Incontro AVO</b></h2>
-        <p class="info" style="text-align: center;">
-          <i class="far fa-calendar-alt"></i>
-          <b>22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30</b>
-        </p>
-        <ol style="font-size: 0.8rem;">
-          <li><span class="number_divider">1</span>Saluti del presidente AVO Mondovì Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe 
-            Guerra e della Direzione Sanitaria con il dottor Maurizio Ippoliti. Relazione del Presidente AVO e 
-            della Vicepresidente AVO Mondovì su origine, valori, significato del volontariato Avo, organizzazione. 
-            missione e importanza della partecipazione alla vita associativa. Intervento su primo soccorso a cura dell'
-             Infermiera Daniela Bisi;</li>
-          <li><span class="number_divider">2</span>Etica del volontario: consapevolezza e conoscenza di sé, come approcciarsi alle persone fragili e 
-            come gestire le emozioni con la psicologa dott. Michela Boccabella Norme di igiene, profilassi, vaccini, post-covid, malattie infettive con
-             Coordinatrice infermieristica Daniela Bisi;</li>
-          <li><span class="number_divider">3</span>La relazione di aiuto: comunicazione e ascolto per rendere efficace e terapeutico il volontariato, 
-            le aspettative e le motivazioni del volontario Avo con la psicologa Dott. Michela Boccabella. Fattive collaborazioni tra volontari, medici, 
-            infermieri, oss con la Dottoressa Vera Bignone;</li>
-          <li><span class="number_divider">4</span>Le attività di Avo Mondovì' nelle varie Rsa e a domicilio. Interverranno responsabili Rsa e per il volontariato 
-            domiciliare il Presidente Avo Mondovi e Responsabili CSSM.</li>
-          <li><span class="number_divider">5</span>Essere volontario con persone particolarmente fragili con intervento coordinatori Centro psichiatrico di Ceva e 
-            coordinatrici Dea Mondovì. Aspetti medico legali, norme di sicurezza, emergenza, antincendio, antinfortunistica con il Responsabile RSPP di ASL CN1 l'Architetto
-             Maurizio Origlia.</li>
-        </ol>
-        <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
-      </dialog>-->
+      <br>
       </div>
-      <div class="cardContainer animate__animated animate__bounce">
-        <div class="item-container concluso">
-          <div class="img-container">
-              <img src="./assets/img/avo.mondovi/photo_2023-06-08_22-07-49.jpg" alt="Event image">
-          </div>
+    </section>
+    <br>
+    <section  class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
+      <br>
+      <h2>Eventi conclusi:</h2>
+      <div style="display: flex; overflow-x: scroll; align-items: center; margin: 0 auto; ">
+        <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
+          <div class="item-container" onclick="window.dialog.showModal();">
+            <!--<div class="item-container" onclick="window.dialog.showModal();">-->
+            <div class="img-container">
+                <img src="./assets/img/avo.mondovi/avo.mondovi-07062023-0004.webp" alt="Event image">
+            </div>
 
-          <div class="body-container">
-              <div class="overlay"></div>
+            <div class="body-container">
+                <div class="overlay"></div>
 
-              <div class="event-info">
-                  <p class="title" style="text-align: center;">IL SALONE DEL VOLONTARIATO</p>
-                  <div class="separator"></div>
-                  <p class="info" style="text-align: center;">Mondovì, via Sant'Agostino</p>
-                  <p class="price">Già concluso</p>
+                <div class="event-info">
+                    <p class="title">INCONTRO AVO</p>
+                    <div class="separator"></div>
+                    <p class="info" style="text-align: center;">Sede della Croce Rossa di Mondovì - via Croce Rossa 4</p>
+                    <p class="price">Già concluso</p>
 
-                  <div class="additional-info">
-                      <p class="info">
-                          <i class="far fa-calendar-alt"></i>
-                          6 giugno 2023
-                          <br>
-                          dalle 9 alle 14
-                      </p>
+                    <div class="additional-info">
+                        <p class="info">
+                            <i class="far fa-calendar-alt"></i>
+                            22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30
+                        </p>
 
-                      <p class="info description">
-                        Incontro tra scuola e volontari dell'Associazione Volontari Ospedalieri di Mondovì
-                      </p>
-                  </div>
-              </div>
-          </div>
-      </div>
+                        <p class="info description">
+                          Saluti del presidente AVO Mondovl Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe <span>...</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--<dialog id="dialog" class="animate__animated animate__fadeInLeft animate__fadeInLeft">
+          <h2><b>Incontro AVO</b></h2>
+          <p class="info" style="text-align: center;">
+            <i class="far fa-calendar-alt"></i>
+            <b>22 - 24 - 31 maggio 2023 <br> 5 - 9 giugno 2023 <br> dalle 17.30 alle 19.30</b>
+          </p>
+          <ol style="font-size: 0.8rem;">
+            <li><span class="number_divider">1</span>Saluti del presidente AVO Mondovì Giuseppe Bertone, del Direttore Generale ASL CN1 dottor Giuseppe 
+              Guerra e della Direzione Sanitaria con il dottor Maurizio Ippoliti. Relazione del Presidente AVO e 
+              della Vicepresidente AVO Mondovì su origine, valori, significato del volontariato Avo, organizzazione. 
+              missione e importanza della partecipazione alla vita associativa. Intervento su primo soccorso a cura dell'
+              Infermiera Daniela Bisi;</li>
+            <li><span class="number_divider">2</span>Etica del volontario: consapevolezza e conoscenza di sé, come approcciarsi alle persone fragili e 
+              come gestire le emozioni con la psicologa dott. Michela Boccabella Norme di igiene, profilassi, vaccini, post-covid, malattie infettive con
+              Coordinatrice infermieristica Daniela Bisi;</li>
+            <li><span class="number_divider">3</span>La relazione di aiuto: comunicazione e ascolto per rendere efficace e terapeutico il volontariato, 
+              le aspettative e le motivazioni del volontario Avo con la psicologa Dott. Michela Boccabella. Fattive collaborazioni tra volontari, medici, 
+              infermieri, oss con la Dottoressa Vera Bignone;</li>
+            <li><span class="number_divider">4</span>Le attività di Avo Mondovì' nelle varie Rsa e a domicilio. Interverranno responsabili Rsa e per il volontariato 
+              domiciliare il Presidente Avo Mondovi e Responsabili CSSM.</li>
+            <li><span class="number_divider">5</span>Essere volontario con persone particolarmente fragili con intervento coordinatori Centro psichiatrico di Ceva e 
+              coordinatrici Dea Mondovì. Aspetti medico legali, norme di sicurezza, emergenza, antincendio, antinfortunistica con il Responsabile RSPP di ASL CN1 l'Architetto
+              Maurizio Origlia.</li>
+          </ol>
+          <button onclick="window.dialog.close();" aria-label="close" class="x">❌</button>
+        </dialog>-->
+        </div>
+        <div class="cardContainer animate__animated animate__bounce">
+          <div class="item-container concluso">
+            <div class="img-container">
+                <img src="./assets/img/avo.mondovi/photo_2023-06-08_22-07-49.jpg" alt="Event image">
+            </div>
+
+            <div class="body-container">
+                <div class="overlay"></div>
+
+                <div class="event-info">
+                    <p class="title" style="text-align: center;">IL SALONE DEL VOLONTARIATO</p>
+                    <div class="separator"></div>
+                    <p class="info" style="text-align: center;">Mondovì, via Sant'Agostino</p>
+                    <p class="price">Già concluso</p>
+
+                    <div class="additional-info">
+                        <p class="info">
+                            <i class="far fa-calendar-alt"></i>
+                            6 giugno 2023
+                            <br>
+                            dalle 9 alle 14
+                        </p>
+
+                        <p class="info description">
+                          Incontro tra scuola e volontari dell'Associazione Volontari Ospedalieri di Mondovì
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
   </main><!-- End #main -->
