--- a/pensieri.html
+++ b/pensieri.html
@@ -77,13 +77,15 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="./index.html#hero">HOME</a></li>
+          <li><a class="nav-link scrollto" href="./index.html#hero">HOME</a></li>
           <li><a class="nav-link scrollto" href="./index.html#about">CHI SIAMO</a></li>
           <li><a class="nav-link scrollto" href="./index.html#services">COSA FACCIAMO</a></li>
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
-          <li><a class="nav-link" style="padding-right: 30px;" href="./pensieri.html">PENSIERI</a></li><!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          
+          <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
+          <li><a class="nav-link active" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li><!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -114,9 +116,9 @@
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Pensieri</h2>
-          <ol>
+        <div class="justify-content-between align-items-center"  style="text-align: center;">
+          <h1>Pensieri</h1>
+          <ol style="text-align: center;">
             <li><a href="index.html">Home</a></li>
             <li>Pensieri</li>
           </ol>
@@ -130,7 +132,7 @@
       <div class="container">
       <div class="row">
         
-        <div style="width: 60%; margin:0 auto; vertical-align: middle;">
+        <div  class="videoContainer" style="width: 60%; margin:0 auto; vertical-align: middle;">
           <video style="width: 100%;" id="player" playsinline controls data-poster="./assets/img/avo.mondovi/AVO-MONDOVI.jpg">
             <source src="./assets/videos/pensieri.mp4" type="video/mp4" />
           </video>
