--- a/inner-page.html
+++ b/inner-page.html
@@ -115,7 +115,7 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <main id="main" style="width: 100%;">
 
     <!-- ======= Breadcrumbs ======= -->
     <section class="breadcrumbs">
@@ -134,7 +134,7 @@
     <div class="embedsocial-hashtag" data-ref="c989df2afe0b889ebc62fd0a4a12279afa09c2b9"></div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
     <section class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
       <h2  style="padding-top: 1em;">Eventi in corso:</h2>
-      <div style="display: flex; overflow-x: scroll; align-items: center; margin: 0 auto; ">
+      <div style="display: flex; overflow-x: scroll; width: 100%; align-items: center; margin: 0 auto; ">
         <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
           <div class="item-container" onclick="window.dialog.showModal();">
             <!--<div class="item-container" onclick="window.dialog.showModal();">-->
@@ -226,10 +226,10 @@
       </div>
     </section>
     <br>
-    <section  class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
+    <section class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
       <br>
       <h2>Eventi conclusi:</h2>
-      <div style="display: flex; overflow-x: scroll; align-items: center; margin: 0 auto; ">
+      <div  style="display: flex; overflow-x: scroll; width: 100%; align-items: center; margin: 0 auto; ">
         <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
           <div class="item-container" onclick="window.dialog.showModal();">
             <!--<div class="item-container" onclick="window.dialog.showModal();">-->
