--- a/inner-page.html
+++ b/inner-page.html
@@ -131,8 +131,7 @@
 
       </div>
     </section><!-- End Breadcrumbs -->
-    <div class="embedsocial-hashtag" data-ref="c989df2afe0b889ebc62fd0a4a12279afa09c2b9"></div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>
-    <section class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
+    <div class="embedsocial-hashtag" data-ref="4c2c70eadd196320efda9b77568ab99c47bafed9"> <a class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial"> Widget by EmbedSocial <span>→</span> </a> </div> <script> (function(d, s, id) { var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js); }(document, "script", "EmbedSocialHashtagScript")); </script>    <section class="inner-page" style="align-items: center; width: 70%; padding:0; margin: 0 auto; display:grid;">
       <h2  style="padding-top: 1em;">Eventi in corso:</h2>
       <div style="display: flex; overflow-x: scroll; width: 100%; align-items: center; margin: 0 auto; ">
         <div class="cardContainer animate__animated animate__bounce hasTooltip tipso prefers-reduced-motion">
