--- a/dove-operiamo.html
+++ b/dove-operiamo.html
@@ -134,7 +134,7 @@
     </section><!-- End Breadcrumbs -->
 
     <section class="inner-page align-items-center" style="display: flex; margin: 0 auto; text-align: center; align-items: center;">
-      <img src="./assets/img/mappa.png" style="image-rendering: optimizeQuality; object-fit: cover;">
+      <img src="./assets/img/mappa.jpg" style="image-rendering: optimizeQuality; object-fit: cover; width: 20rem; margin-left: 15rem; margin-right: 5rem;">
         <div style="width: 70%; margin: 0 auto; text-align: left;">
           <dl>
             <dt>Domiciliarità</dt>
@@ -148,9 +148,9 @@
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/t3ER6wRkhcdRjwF9A">Casa di Riposo San Michele Arcangelo</a></dd>
             <dt>Ceva</dt>
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/wHx1iN6Dw1uXoWRS9">Ospedale Poveri Infermi Ceva</a></dd>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/wHx1iN6Dw1uXoWRS9">Centro diurno</a></dd>
+            <dd>- <a target="_blank" href="https://maps.app.goo.gl/wHx1iN6Dw1uXoWRS9">Centro diurno - Via XX settembre, 3</a></dd>
             <dt>Mombasiglio</dt>
-            <dd>- <a target="_blank" href="https://maps.app.goo.gl/8vVuMj6ZBurBc3x16">Rsa la casa del sorriso</a></dd>
+            <dd>- <a target="_blank" href="https://maps.app.goo.gl/8vVuMj6ZBurBc3x16">Rsa La casa del sorriso</a></dd>
             <dt>Garessio</dt>
             <dd>- <a target="_blank" href="https://maps.app.goo.gl/sWEDUL2hy5dXsJY27">Fondazione Opera Pia Garelli</a></dd>
           
