--- a/index.html
+++ b/index.html
@@ -484,7 +484,6 @@
 
         <div id="dove-siamo" class="section-title">
           <h2>Dove siamo</h2>
-          <p>La sede centrale di AVO Mondovì si trova in Piazza Ellero, 45.</p>
         </div>
 
         <div class="row">
@@ -494,19 +493,31 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Piazza Ellero, 45 - Ospedale di Mondovì, 1° Piano</p>
+                <p>Sede legale: Piazza Ellero, 45<br>Sede operativa: Ospedale di Mondovì, 1° Piano - Via S. Rocchetto, 99</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:avomondovì@libero.it">avomondovì@libero.it</a></p>
+                <p><a href="mailto:avomondovì@libero.it">avomondovì@libero.it</a><br><a href="mailto:avomondovì@legalmail.it">avomondovì@legalmail.it</a></p>
               </div>
 
-              <div class="phone">
+              <div class="phone" style="margin-bottom: 0;">
                 <i class="bi bi-phone"></i>
                 <h4>Chiamaci:</h4>
                 <p>+39 334 111 2372</p>
+              </div>
+                
+              <div class="social-icons-btn" style="margin: 0 auto; width: fit-content; padding-bottom: 2rem;">
+                <a class="icons twitter"  href="#">
+                  <i style="background-color: transparent; color: white; margin: 0;" class="bi bi-twitter"></i>
+                </a>
+                <a class="icons facebook"  href="#">
+                  <i style="background-color: transparent; color: white; margin: 0;" class="bi bi-facebook"></i>
+                </a>
+                <a class="icons instagram"  href="#">
+                  <i style="background-color: transparent; color: white; margin: 0;" class="bi bi-instagram"></i>
+                </a>
               </div>
 
               <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1a-UdFwS5dnXxR7k1aUBmXHT0yvFGwmA&ehbc=2E312F" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
