--- a/inner-page.html
+++ b/inner-page.html
@@ -86,11 +86,10 @@
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
           <li><a class="nav-link scrollto" href="./index.html#about">CHI SIAMO</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#services">DIVENTA UN VOLONTARIO AVO</a></li>
           <li><a class="nav-link scrollto" href="./index.html#team">CONTATTI</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link active" href="./inner-page.html">I NOSTRI EVENTI</a></li>
           <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
+          <li><a class="nav-link" href="./ringraziamenti.html">ATTESTATI</a></li>
           <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
