--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">HOME</a></li>
           <li><a class="nav-link scrollto" href="#about">CHI SIAMO</a></li>
-          <li><a class="nav-link scrollto" href="#services">COSA FACCIAMO</a></li>
           <li><a class="nav-link scrollto" href="#team">CONTATTI</a></li>
           <li><a class="nav-link scrollto " href="#contact">DOVE SIAMO</a></li>
           <li><a class="nav-link" href="./inner-page.html">I NOSTRI EVENTI</a></li>
           <li><a class="nav-link" href="./dove-operiamo.html">DOVE OPERIAMO</a></li>
+          <li><a class="nav-link" href="./ringraziamenti.html">ATTESTATI</a></li>
           <li><a class="nav-link" href="./pensieri.html" style="padding-right: 30px;">PENSIERI</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -493,7 +493,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Sede legale: Piazza Ellero, 45<br>Sede operativa: Ospedale di Mondovì, 1° Piano - Via S. Rocchetto, 99</p>
+                <p>Sede legale: Piazza Ellero, 45 - Mondovì<br>Sede operativa: Ospedale di Mondovì, 1° Piano - Via S. Rocchetto, 99</p>
               </div>
 
               <div class="email">
